--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');
 
 :root{
-    -color-primary-1: hsl(322, 100%, 66%);
-    -color-primary-2: hsl(321, 100%, 78%);
-    -color-primary-3: hsl(0, 100%, 63%);
-    -color-titles: hsl(192, 100%, 9%);
-    -color-text-secundary: hsl(207, 100%, 98%);
+    --color-primary-1: hsl(322, 100%, 66%);
+    --color-primary-2: hsl(321, 100%, 78%);
+    --color-primary-3: hsl(0, 100%, 63%);
+    --color-titles: hsl(192, 100%, 9%);
+    --color-text-secundary: hsl(207, 100%, 98%);
     /*En la fuente open sans el pesos a utilizar es de 700*/
-    -font-Headings: 'Open Sans', sans-serif;
+    --font-Headings: 'Poppins', sans-serif;
 }
 *{
     margin: 0;
@@ -19,4 +19,53 @@
 body{
     font-family: 'Open Sans', sans-serif;
     /*Esta fuente tiene los pesos 400 600 700*/
+}
+
+@media only screen and (max-width: 375px){
+.invitation{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5vh 0;
+}
+section>h2{
+    text-align: center;
+    color: var(--color-titles);
+}
+section>h2+button{
+    border-radius: 5rem;
+    width: 55vw;
+    height: 8vh;
+    margin-top: 5vh;
+    background-color: var(--color-primary-1);
+}
+section>button>span{
+    color: var(--color-text-secundary);
+}
+}
+
+@media only screen and (min-width: 376px) {
+    .invitation{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 5vh 0;
+    }
+    section>h2{
+        text-align: center;
+        color: var(--color-titles);
+    }
+    section>h2+button{
+        border-radius: 5rem;
+        width: 15rem;
+        height: 8vh;
+        margin-top: 5vh;
+        background-color: var(--color-primary-1);
+    }
+    section>button>span{
+        color: var(--color-text-secundary);
+    }
+
 }
