--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,48 @@ section .icon-communities p span{
     padding-left: 21vw;
     font-size: 4vw;
 }
-.messages-sent{
-    text-align: center;
+
+.icon-communities p a{
+    display: flex;
+    justify-content: center;
     font-size: 4vw;
-}
-@media (min-width: 800px){
     
+}
+
+@media (min-width: 800px){
+   
+section>.screen-mockups{
+    text-align: center;
+}
+section>.screen-mockups img{
+    width: 65%;
+    margin-bottom: -60px;
+}
+section .icon-communities{
+    margin: 10vw;
+    display: inline-block;
+    
+}
+section .icon-communities img{
+    width: 2.5vw;
+    padding-left: 10vw;
+    padding-right: 16vw;
+}
+
+section .icon-communities p>strong{
+    font-size: 3vw;
+    padding: 0 10vw;
+}
+section .icon-communities p span{
+    padding-left: 10vw;
+    font-size: 1vw;
+}
+.icon-communities p a{
+    display: flex;
+    justify-content: center;
+    font-size: 1vw;
+    
+}
+
 }
 
