--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,13 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 :root{
-    -color-primary-1: hsl(322, 100%, 66%);
-    -color-primary-2: hsl(321, 100%, 78%);
-    -color-primary-3: hsl(0, 100%, 63%);
-    -color-titles: hsl(192, 100%, 9%);
-    -color-text-secundary: hsl(207, 100%, 98%);
+    --color-primary-1: hsl(322, 100%, 66%);
+    --color-primary-2: hsl(321, 100%, 78%);
+    --color-primary-3: hsl(0, 100%, 63%);
+    --color-titles: hsl(192, 100%, 9%);
+    --color-text-secundary: hsl(207, 100%, 98%);
     /*En la fuente open sans el pesos a utilizar es de 700*/
-    -font-Headings: 'Open Sans', sans-serif;
+    --font-Headings: 'Poppins';
+    --font-body: 'Open Sans';
 }
 *{
     margin: 0;
@@ -17,6 +18,95 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'Open Sans', sans-serif;
-    /*Esta fuente tiene los pesos 400 600 700*/
+    font-family: var(--font-body);
 }
+
+header>nav{
+    padding: 1rem 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu-bar>img{
+    width: 100px;
+    height: 50%;
+}
+
+nav img+label{
+    color: hsl(321, 100%, 78%);
+    font-size: 10px;
+    padding: 2px 10px;
+    border: 1px solid hsl(321, 100%, 78%);
+    border-radius: 10px;
+    text-align: center;
+}
+main{
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+}
+
+.title>p{
+    margin: 0 70px;
+    margin-top: 50px;
+    color: var(--color-titles);
+    font-family: 'Poppins';
+    font-weight: 700;
+    font-size: 20px;
+}
+.information>p{
+    margin: 20px 60px;
+    font-weight: 400;
+    font-size: 12px;
+}
+
+#buttom>p{
+    color: white;
+    background-color: var(--color-primary-1);
+    font-size: 8px;
+    border-radius: 20px;
+    margin: 0 130px;
+    padding: 5px 10px;
+}
+
+
+
+@media screen and (min-width:1440px){
+    
+    header>nav{
+        padding: 2rem 2rem;
+    }
+    .menu-bar>img{
+        width: 250px;
+        height: 70%;
+    }
+    
+    nav img+label{
+        font-size: 15px;        
+        padding: 8px 15px;
+        border-radius: 20px;
+    }
+
+    .title>p{
+        margin-top: 180px;
+        font-size: 50px;
+    }
+
+    .information>p{
+        padding-bottom: 10px;
+        margin: 20px 400px;
+        font-weight: 400;
+        font-size: 20px;
+    }
+
+    #buttom>p{
+        color: white;
+        background-color: var(--color-primary-1);
+        font-size: 20px;
+        border-radius: 30px;
+        margin: 0 580px;
+        padding: 15px 30px;
+    }
+
+}
+
